Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32197

Terminal's tab may display wrong project name

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • Qt Creator 16.0.0
    • Qt Creator 15.0.1
    • Terminal
    • None
    • Ubuntu 22.04 LTS
    • f28fe261f (15.0), 02d7e59a2 (15.0), 5bc76999b (16.0), 5fa207ea1 (16.0)

      1. Open two projects in Creator and check "Run in Terminal" for both.
        FWIW, I used two CMake-based Qt Console Applications from Creator's wizard.
      2. Run the active project, e.g. by pressing Ctrl+R.
        The Terminal view with the application's output will show up. On the Terminal's tab, you can read the active project's name.
      3. In the Projects view, right-click on the inactive project and select "Run" from the context menu.
        Now the inactive project's output appears in the Terminal view.
        Expected: The tab displays the inactive project's name.
        Actual: The tab still displays the active project's name which doesn't match the output.

      Creator should either update the tab or create a separate tab like the Application Output view does.

        For Gerrit Dashboard: QTCREATORBUG-32197
        # Subject Branch Project Status CR V

            madwinter Marcus Tillmanns
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes