Terminal: Fix Terminal reuse key

Use the full command line to determine the Terminals
reuse key, as the executable may be a helper tool like "disclaim"
on macOS

Fixes: QTCREATORBUG-32197
Change-Id: I9d6cba4963fce5e2c4b2506577346446a564d5fc
Reviewed-by: Cristian Adam <cristian.adam@qt.io>